--- a/faq.html
+++ b/faq.html
@@ -19,13 +19,15 @@
         <li data-menuanchor="page1" class="homes">
             <a href="#page1"></a>
         </li>
-        <li data-menuanchor="page2"><a href="index.html#page2">Intro</a>
+        <li data-menuanchor="page2"><a href="index.php#page2">Intro</a>
         </li>
-        <li data-menuanchor="page3"><a href="index.html#page3">Mission</a>
+        <li data-menuanchor="page3"><a href="index.php#page3">Mission</a>
         </li>
-        <li data-menuanchor="page4"><a href="index.html#page4">Ethics</a>
+        <li data-menuanchor="page4"><a href="index.php#page4">Ethics</a>
         </li>
-        <li data-menuanchor="page5"><a href="index.html#page5">About</a>
+        <li data-menuanchor="page5"><a href="index.php#page5">About</a>
+        </li>
+        <li data-menuanchor="page6"><a href="index.php#page6">Contact Us</a>
         </li>
         <li class="active"><a href="#">FAQ</a>
         </li>
